fix(button): Prevent wrapping of button text

--- a/react/Button/Button.less
+++ b/react/Button/Button.less
@@ -24,6 +24,9 @@
   border-radius: 2px;
   transition: background-color 0.2s, transform .2s cubic-bezier(0.020, 1.505, 0.745, 1.235);
   cursor: pointer;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   &:active,
   &.rootActive {
     box-shadow: none;
